# SingleLinkedList

./: .gitignore  CMakeLists.txt  SLL.h  Singlelinkedlist.c  Tests.c
Tests/: CMakeLists.txt  Singlelinkedlist.c
Tests/src/: Singlelinkedlist.h  Tests.c
src/: Singlelinkedlist.c  Singlelinkedlist.h  a.out  main.c
